--- a/Summer Tasks - 1/Python/Task.ipynb
+++ b/Summer Tasks - 1/Python/Task.ipynb
@@ -498,6 +498,122 @@
     "name = input(\"Enter the Name of the person whose details you want: \")\n",
     "lwdbfinal[lwdbfinal['Name'] == name]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - 6:__\n",
+    "\n",
+    "    Run Shell or linux Commands in python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output: \n",
+      " Volume in drive C has no label.\n",
+      " Volume Serial Number is 6812-6576\n",
+      "\n",
+      " Directory of c:\\College\\Linux World\\Summer Tasks - 1\\Python\n",
+      "\n",
+      "05/25/2024  01:38 PM    <DIR>          .\n",
+      "05/25/2024  01:38 PM    <DIR>          ..\n",
+      "05/20/2024  01:30 AM               799 Menu.py\n",
+      "05/20/2024  12:17 AM             1,302 Task List.md\n",
+      "05/25/2024  02:01 PM            15,287 Task.ipynb\n",
+      "               3 File(s)         17,388 bytes\n",
+      "               2 Dir(s)  102,622,089,216 bytes free\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "cmd = input(\"Enter the shell command: \")\n",
+    "\n",
+    "result = subprocess.run(cmd, shell=True, capture_output=True, text=True)\n",
+    "\n",
+    "print(\"Output: \")\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - 6__:\n",
+    "\n",
+    "    Sending Whatsapp message using python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyautogui as py\n",
+    "import webbrowser as wb\n",
+    "import time "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def send_whatsapp(mob, message):\n",
+    "    # Open WhatsApp Web\n",
+    "    wb.open(\"https://web.whatsapp.com/\")\n",
+    "    time.sleep(20)  # Waiting for opening of WhatsApp (adjust as needed)\n",
+    "\n",
+    "    # Typing recipient's mobile number\n",
+    "    py.hotkey(\"ctrl\", 'alt', '/')  # Shortcut to focus on search bar\n",
+    "    time.sleep(3)\n",
+    "    py.typewrite(mob)\n",
+    "    time.sleep(2)\n",
+    "    py.press(\"enter\")\n",
+    "\n",
+    "    # Typing and sending the message\n",
+    "    time.sleep(2)\n",
+    "    py.typewrite(message)\n",
+    "    py.press(\"enter\")\n",
+    "\n",
+    "mobile_number = input(\"Enter the mobile number to which you want to send the message: \")\n",
+    "message = input(\"Type the message: \")\n",
+    "\n",
+    "send_whatsapp(mobile_number, message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
