--- a/Summer Tasks - 1/Python/Task.ipynb
+++ b/Summer Tasks - 1/Python/Task.ipynb
@@ -535,6 +535,9 @@
     }
    ],
    "source": [
+    "# Linux Commands will only run on linux OS\n",
+    "# Utilize same code for linux system to run commands via python\n",
+    "\n",
     "import subprocess\n",
     "\n",
     "cmd = input(\"Enter the shell command: \")\n",
@@ -595,18 +598,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "__Task - 7:__\n",
+    "\n",
+    "    Sending Email using python"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Email sent successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import smtplib\n",
+    "\n",
+    "def send_email(sender_email, password, receiver_email, subject, body):\n",
+    "    message = f\"Subject: {subject}\\n\\n{body}\"\n",
+    "\n",
+    "    with smtplib.SMTP('smtp.office365.com', 587) as server:\n",
+    "        server.starttls()\n",
+    "        server.login(sender_email, password)\n",
+    "        server.sendmail(sender_email, receiver_email, message)\n",
+    "\n",
+    "    print(\"Email sent successfully.\")\n",
+    "\n",
+    "# Example Usage:\n",
+    "sender_email = 'chequekar@outlook.com' # Test mail (Use Outlook mail to send the emails)\n",
+    "password = 'Asdfg54321$'    \n",
+    "receiver_email = 'marvelfan389@gmail.com'\n",
+    "subject = 'Greetings'\n",
+    "body = 'how are you'\n",
+    "\n",
+    "send_email(sender_email, password, receiver_email, subject, body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - "
+   ]
   },
   {
    "cell_type": "code",
