--- a/Summer Tasks - 1/Python/Task.ipynb
+++ b/Summer Tasks - 1/Python/Task.ipynb
@@ -646,8 +646,79 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Task - "
+    "__Task - 8:__\n",
+    "\n",
+    "    Sending SMS through python"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Done in a different file due of authentication"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - 9:__\n",
+    "\n",
+    "    Search a String using python which will get the results in google."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://in.linkedin.com/in/vimaldaga',\n",
+       " 'https://www.instagram.com/vimaldaga.india/?hl=en',\n",
+       " 'https://www.hash13.com/fsd/',\n",
+       " 'https://thecreator.one/',\n",
+       " 'https://www.lwindia.com/',\n",
+       " 'https://www.hash13.com/linux-training/']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import googlesearch\n",
+    "\n",
+    "def scrape_google(query, num_results=5):\n",
+    "    search_results = []\n",
+    "    for result in googlesearch.search(query, num_results=num_results):\n",
+    "        search_results.append(result)\n",
+    "    return search_results\n",
+    "\n",
+    "scrape_google(query = \"Vimal Daga\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
