--- a/Summer Tasks - 1/Python/Task.ipynb
+++ b/Summer Tasks - 1/Python/Task.ipynb
@@ -576,15 +576,8 @@
    "source": [
     "def send_whatsapp(mob, message):\n",
     "    # Open WhatsApp Web\n",
-    "    wb.open(\"https://web.whatsapp.com/\")\n",
+    "    wb.open(f\"https://web.whatsapp.com/send?phone={mob}\")\n",
     "    time.sleep(20)  # Waiting for opening of WhatsApp (adjust as needed)\n",
-    "\n",
-    "    # Typing recipient's mobile number\n",
-    "    py.hotkey(\"ctrl\", 'alt', '/')  # Shortcut to focus on search bar\n",
-    "    time.sleep(3)\n",
-    "    py.typewrite(mob)\n",
-    "    time.sleep(2)\n",
-    "    py.press(\"enter\")\n",
     "\n",
     "    # Typing and sending the message\n",
     "    time.sleep(2)\n",
@@ -703,22 +696,146 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - 10:__\n",
+    "\n",
+    "    Find the longitude and location name using python"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geocoder\n",
+    "\n",
+    "def get_coordinates_by_ip():\n",
+    "    g = geocoder.ip('me')\n",
+    "    return g.latlng\n",
+    "\n",
+    "coordinates = get_coordinates_by_ip()\n",
+    "print(f\"Your coordinates based on IP address are: {coordinates}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - 11:__\n",
+    "\n",
+    "    Speak through the speaker using python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You said:  Hi, How are you? What is your name?\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "import pyttsx3\n",
+    "\n",
+    "def speak(text):\n",
+    "    engine = pyttsx3.init()\n",
+    "    voices = engine.getProperty('voices')\n",
+    "    \n",
+    "    # Select the first voice available\n",
+    "    engine.setProperty('voice', voices[0].id)\n",
+    "    \n",
+    "    # Set speech rate and volume\n",
+    "    engine.setProperty('rate', 140)\n",
+    "    engine.setProperty('volume', 1.0)\n",
+    "    \n",
+    "    # Speak the text\n",
+    "    engine.say(text)\n",
+    "    engine.runAndWait()\n",
+    "\n",
+    "text = input(\"Type here what you want me to speak: \")\n",
+    "\n",
+    "print(\"You said: \", text)\n",
+    "speak(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - 12:__\n",
+    "\n",
+    "    Convert text into Audio and whatsapp or email the same audio."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pyttsx3\n",
+    "import pyautogui as py \n",
+    "import webbrowser as wb\n",
+    "import time "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File Delivered Successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This code can be used to send any file using exact path\n",
+    "\n",
+    "def text_to_audio(text, filename):\n",
+    "    engine = pyttsx3.init()\n",
+    "    engine.save_to_file(text, filename)\n",
+    "    engine.runAndWait()\n",
+    "\n",
+    "def send_file_on_whatsapp(mobile, path):\n",
+    "    wb.open(f\"https://web.whatsapp.com/send?phone={mobile}\")\n",
+    "    time.sleep(20)\n",
+    "\n",
+    "    attach = py.locateOnScreen('attach.png')\n",
+    "    time.sleep(3)\n",
+    "    py.click(attach)\n",
+    "    py.press('down')\n",
+    "    time.sleep(1)\n",
+    "    py.press('enter')\n",
+    "    \n",
+    "    time.sleep(5)\n",
+    "    py.typewrite(path)\n",
+    "    time.sleep(1)\n",
+    "    py.press('enter')\n",
+    "    time.sleep(3)\n",
+    "    py.press('enter')\n",
+    "\n",
+    "# Convert text to audio and save it\n",
+    "text = \"Hello, this is a sample text to convert into audio.\"\n",
+    "filename = \"output.mp3\"\n",
+    "text_to_audio(text, filename)\n",
+    "\n",
+    "# Send the audio file via WhatsApp\n",
+    "phone_number = input(\"Enter the mobile number to which you want to send the file: \") \n",
+    "send_file_on_whatsapp(phone_number, filename)\n",
+    "print(\"File Delivered Successfully\")"
+   ]
   },
   {
    "cell_type": "code",
