--- a/Summer Tasks - 1/Python/Task.ipynb
+++ b/Summer Tasks - 1/Python/Task.ipynb
@@ -805,7 +805,7 @@
     "\n",
     "def text_to_audio(text, filename):\n",
     "    engine = pyttsx3.init()\n",
-    "    engine.save_to_file(text, filename)\n",
+    "    engine.save_to_file(text, filename) \n",
     "    engine.runAndWait()\n",
     "\n",
     "def send_file_on_whatsapp(mobile, path):\n",
@@ -835,6 +835,137 @@
     "phone_number = input(\"Enter the mobile number to which you want to send the file: \") \n",
     "send_file_on_whatsapp(phone_number, filename)\n",
     "print(\"File Delivered Successfully\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - 13:__\n",
+    "\n",
+    "    Increase and decrease the volume of your system using python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current volume: 98%\n",
+      "Volume set to 50%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pycaw.pycaw import AudioUtilities, IAudioEndpointVolume\n",
+    "from ctypes import cast, POINTER\n",
+    "from comtypes import CLSCTX_ALL\n",
+    "\n",
+    "def get_default_audio_device():\n",
+    "    \"\"\"Get the default audio device\"\"\"\n",
+    "    devices = AudioUtilities.GetSpeakers()\n",
+    "    interface = devices.Activate(\n",
+    "        IAudioEndpointVolume._iid_, CLSCTX_ALL, None)\n",
+    "    return cast(interface, POINTER(IAudioEndpointVolume))\n",
+    "\n",
+    "def get_current_volume():\n",
+    "    \"\"\"Get the current volume level as a percentage\"\"\"\n",
+    "    volume = get_default_audio_device()\n",
+    "    current_volume = volume.GetMasterVolumeLevelScalar()\n",
+    "    return int(current_volume * 100)\n",
+    "\n",
+    "def set_volume(level):\n",
+    "    \"\"\"Set the volume level (0 to 100)\"\"\"\n",
+    "    volume = get_default_audio_device()\n",
+    "    if 0 <= level <= 100:\n",
+    "        volume.SetMasterVolumeLevelScalar(level / 100, None)\n",
+    "        print(f\"Volume set to {level}%\")\n",
+    "    else:\n",
+    "        raise ValueError(\"Volume level must be between 0 and 100\")\n",
+    "\n",
+    "def main():\n",
+    "    try:\n",
+    "        current_volume = get_current_volume()\n",
+    "        print(f\"Current volume: {current_volume}%\")\n",
+    "        new_volume = int(input(\"Enter new volume level (0-100): \"))\n",
+    "        set_volume(new_volume)\n",
+    "    except ValueError as e:\n",
+    "        print(e)\n",
+    "    except Exception as e:\n",
+    "        print(f\"An unexpected error occurred: {e}\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - 14:__\n",
+    "\n",
+    "    Send bulk email using python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Email sent successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import smtplib\n",
+    "\n",
+    "def send_email(sender_email, password, receiver_email, subject, body):\n",
+    "    message = f\"Subject: {subject}\\n\\n{body}\"\n",
+    "\n",
+    "    with smtplib.SMTP('smtp.office365.com', 587) as server:\n",
+    "        server.starttls()\n",
+    "        server.login(sender_email, password)\n",
+    "        for i in receiver_email:\n",
+    "            server.sendmail(sender_email, i, message)\n",
+    "\n",
+    "    print(\"Email sent successfully.\")\n",
+    "\n",
+    "# Example Usage: \n",
+    "sender_email = 'chequekar@outlook.com' # Test mail (Use Outlook mail to send the emails)\n",
+    "password = 'Asdfg54321$'    \n",
+    "receiver_email = ['marvelfan389@gmail.com', 'geofi.official@gmail.com']\n",
+    "subject = 'Greetings'\n",
+    "body = 'how are you'\n",
+    "\n",
+    "send_email(sender_email, password, receiver_email, subject, body)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Task - 15:__\n",
+    "\n",
+    "    Open any app using voice command"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# There is an open_app.py file in the same directory \n",
+    "# where this notebook is placed, run that to perform the\n",
+    "# above described task"
    ]
   },
   {
