--- a/Summer Tasks - 1/Python/Task.ipynb
+++ b/Summer Tasks - 1/Python/Task.ipynb
@@ -645,12 +645,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__To Make it work you must be logged in Google messages for web.__"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Done in a different file due of authentication"
+    "import webbrowser as wb\n",
+    "import pyautogui as py\n",
+    "import time "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SMS is delivered Successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The sleep timing can be changed accordingly with processing speed of computer and internet connection\n",
+    "\n",
+    "\"\"\"\n",
+    "Alert Important:\n",
+    "\n",
+    "To Make it work, you must be logged in Google messages for web.\n",
+    "\"\"\"\n",
+    "\n",
+    "def send_sms(phone, msg):\n",
+    "    wb.open(\"https://messages.google.com/web/conversations/new\")\n",
+    "    time.sleep(15) # Change the time accordingly here we given time for loading\n",
+    "    py.typewrite(phone)\n",
+    "    time.sleep(2) # time is in seconds\n",
+    "    py.press('enter')\n",
+    "    time.sleep(7) \n",
+    "    py.typewrite(msg)\n",
+    "    time.sleep(2)\n",
+    "    py.press('enter')\n",
+    "\n",
+    "phone = input(\"Enter the Phone number or (Persons name if exist in contact list): \")\n",
+    "msg = input(\"Type the message you want to send here: \")\n",
+    "\n",
+    "send_sms(phone, msg)\n",
+    "print(\"SMS is delivered Successfully\")"
    ]
   },
   {
