--- a/Summer Tasks - 1/Python/Task.ipynb
+++ b/Summer Tasks - 1/Python/Task.ipynb
@@ -641,25 +641,9 @@
    "source": [
     "__Task - 8:__\n",
     "\n",
-    "    Sending SMS through python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    Sending SMS through python\n",
+    "\n",
     "__To Make it work you must be logged in Google messages for web.__"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import webbrowser as wb\n",
-    "import pyautogui as py\n",
-    "import time "
    ]
   },
   {
@@ -677,6 +661,10 @@
    ],
    "source": [
     "# The sleep timing can be changed accordingly with processing speed of computer and internet connection\n",
+    "\n",
+    "import webbrowser as wb\n",
+    "import pyautogui as py\n",
+    "import time \n",
     "\n",
     "\"\"\"\n",
     "Alert Important:\n",
