--- a/Summer Tasks - 1/Python/Task.ipynb
+++ b/Summer Tasks - 1/Python/Task.ipynb
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -628,9 +628,9 @@
     "# Example Usage:\n",
     "sender_email = 'chequekar@outlook.com' # Test mail (Use Outlook mail to send the emails)\n",
     "password = 'Asdfg54321$'    \n",
-    "receiver_email = 'marvelfan389@gmail.com'\n",
+    "receiver_email = 'joshipriya8985@gmail.com'\n",
     "subject = 'Greetings'\n",
-    "body = 'how are you'\n",
+    "body = 'Test message from python by aakash'\n",
     "\n",
     "send_email(sender_email, password, receiver_email, subject, body)"
    ]
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -743,9 +743,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your coordinates based on IP address are: [26.9196, 75.7878]\n"
+     ]
+    }
+   ],
    "source": [
     "import geocoder\n",
     "\n",
@@ -768,14 +776,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You said:  Hi, How are you? What is your name?\n"
+      "You said:  Hi, Priya Joshi Ma'am. This is test code by python\n"
      ]
     }
    ],
@@ -885,15 +893,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current volume: 98%\n",
-      "Volume set to 50%\n"
+      "Current volume: 100%\n",
+      "Volume set to 70%\n"
      ]
     }
    ],
@@ -950,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
